--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alper Yarenbasi</title>
     <link rel="icon" href="/public/favicon_io3/android-chrome-512x512.png" />
+    <meta property="og:title" content="Alper Yarenbasi" />
+    <meta property="og:description" content="Alper Yarenbasi: My Personal E-portofolio" />
+    <meta property="og:image" content="https://imgur.com/a/Yad41N3" />
+    <meta property="og:url" content="alpery.vercel.app" />
   </head>
   <body>
     <div id="root"></div>
