--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/public/favicon_io3/android-chrome-512x512.png" />
     <meta property="og:title" content="Alper Yarenbasi" />
     <meta property="og:description" content="Alper Yarenbasi: My Personal E-portofolio" />
-    <meta property="og:image" content="https://imgur.com/a/Yad41N3" />
+    <meta property="og:image" content="https://i.imgur.com/c1KMTDR.png" />
     <meta property="og:url" content="alpery.vercel.app" />
   </head>
   <body>
