--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alper Yarenbasi</title>
-    <link rel="icon" href="/public/favicon_io3/android-chrome-512x512.png" />
+    <link rel="icon" href="/public/roundLogo.png" />
     <meta property="og:title" content="Alper Yarenbasi" />
     <meta property="og:description" content="Alper Yarenbasi: My Personal E-portofolio" />
-    <meta property="og:image" content="https://i.imgur.com/c1KMTDR.png" />
-    <meta property="og:url" content="alpery.vercel.app" />
+    <meta property="og:image" content="https://i.imgur.com/r9QoDrq.png" />
+    <meta property="og:url" content="https://alpery.vercel.app" />
   </head>
   <body>
     <div id="root"></div>
